Changed mail server plus added new exception

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=binaspaulina1@gmail.com
-spring.mail.password=oudmcrmaxkzfhvcu
+spring.mail.host=hostingwp2068558.online.pro
+spring.mail.port=465
+spring.mail.username=tacho@imakeable.com
+spring.mail.password=ak_CS3bJ
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
