--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,18 @@ spring.mail.password=ak_CS3bJ
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.h2.console.enabled=true
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-logging.file.path=/home/ubuntu/tachocms.log
+
+logging.file.path=/home/tachocms/tachocms.log
+server.port=8080
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/tachocms
+spring.datasource.username=tachocms
+spring.datasource.password=u1<6Tzd?Q]
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.jpa.hibernate.show-sql=true
+spring.datasource.initialization-mode=always
+spring.datasource.initialize=true
+spring.datasource.continue-on-error=true
+
